--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
     padding: .5rem 0;
 }
 
-input, textarea, button {
+input, button {
     font-family: 'Mali', cursive;
 }
 
@@ -109,6 +109,7 @@ input:focus {
     margin: .25rem 0;
     margin-right: .5rem;
     width: 100%;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 14px;
 }
 
